--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
 
   "require-dev": {
-    "phpunit/phpunit": "~4.0"
+    "phpunit/phpunit": "~4.0",
+    "mikey179/vfsStream": "1.3.*"
   },
 
   "autoload": {
