code cleanup and make sure all tests run correctly

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
   - hhvm
 
 before_script:
-  - curl --version
   - composer install --no-interaction --prefer-source --dev
-  
+
+
+script: vendor/bin/phpunit
